more mobile support

--- a/index.html
+++ b/index.html
@@ -50,7 +50,28 @@
     </div>
 
     <div class="container">
+        <div class="row about">
+            <div class="section">
+                <h3 class="center">About Imani Greenidge</h3>
+                <h4 class="flow-text">Imani Greenidge, aspiring software developer and entrepreneur, born and raised in Brooklyn, NY. Has been regarded by many to be very intellectual and capable of doing whatever he sets his mind to. Skilled in many areas including coding
+                    and graphic design and is often working on many different projects. Graduate from Brooklyn High School for Law and Technology and currently enrolled in New York City College of Technology.</h4>
+            </div>
+            <div class="section">
+                <div class="divider"></div>
+                <div>
+                    <h4 class="flow-text">Want to learn more about how I got my beginnings in coding and web development? Well then you're in luck because theres is this article written about me that talks about exactly that and more! Click the button below to read it!</h4>
+                    <blockquote class="flow-text">
+                        "He’s already taking advantage of opportunities to stay engaged. He gave an inspiring speech at the Code Nation fundraiser in 2018, talking specifically about the Hackathon that taught him so much."
+                    </blockquote>
+                    <div class="center">
+                        <a href="https://codenation.org/imani-greenidge/" target="_blank" class="waves-effect waves-light btn orange">Read the Article!</a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
+        <div class="divider"></div>
+        
         <div class="row">
             <div class="section">
                 <div class="col s12 l4 info center">
@@ -58,15 +79,16 @@
                     <img class="thumbnail" src="branding/imanilogo3gold.png"></img>
                     <div class="summary">
                         <h3 class="center">Graphic Design</h3>
-                        <h5 class="left-align">I taught myself graphic design through YouTube and been doing it since I was 11 years old. I do alot of photo editing and minipulation but I still do design alot of stuff like logos, song and album covers etc. Click to see some of my work!</h5>
+                        <h5>I taught myself graphic design through YouTube and been doing it since I was 11 years old. I do alot of photo editing and minipulation but I still do design alot of stuff like logos, song and album covers etc. Click to see some of my work!</h5>
                     </div>
                     </a>
                 </div>
-          
+
                 <div class="col s12 l4 center">
-                    <img class="thumbnail" src="images/websites.jpg"></img>
+                    <img class="thumbnail" src="images/promgallery.jpg"></img>
                     <div class="summary">
                         <h3 class="center">Websites/Projects</h3>
+                        <h5>I first learned how to code through the program CodeNation (FKA ScriptEd). I have been coding and making websites ever since, even this website that you're on right now. Click to see some of my projects.</h5>
                     </div>
                 </div>
 
@@ -75,18 +97,11 @@
                     <img class="thumbnail" src="images/ighoodie3gold.png"></img>
                     <div class="summary">
                         <h3 class="center">Clothing</h3>
+                        <h5>I started to put some of my designs on different kinds of clothing. I made all the designs with my graphic designs skills that I mentioned before. Click here to see some of them and maybe even consider buying some.</h5>
                     </div>
                 </div>
             </div>
         </div>
-
-        <!-- <div class="row">
-            <h3>ABOUT</h3>
-            <div class="divider"></div>
-            <p class="text flow-text">Imani Greenidge, aspiring software developer and entrepreneur, born and raised in Brooklyn, NY. Has been regarded by many to be very intellectual and capable of doing whatever he sets his mind to. Skilled in many areas including coding and
-                graphic design and is often working on many different projects. Graduate from Brooklyn High School for Law and Technology and currently enrolled in New York City College of Technology. <a href="https://codenation.org/imani-greenidge/"
-                    target="_blank">Click here to read an article about how I got my beginnings in coding!</a></p>
-        </div>-->
 
 
     </div>
