--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div>
                     <h4 class="flow-text">Want to learn more about how I got my beginnings in coding and web development? Well then you're in luck because theres is this article written about me that talks about exactly that and more! Click the button below to read it!</h4>
                     <blockquote class="flow-text">
-                        "He’s already taking advantage of opportunities to stay engaged. He gave an inspiring speech at the Code Nation fundraiser in 2018, talking specifically about the Hackathon that taught him so much."
+                        "He's already taking advantage of opportunities to stay engaged. He gave an inspiring speech at the Code Nation fundraiser in 2018, talking specifically about the Hackathon that taught him so much."
                     </blockquote>
                     <div class="center">
                         <a href="https://codenation.org/imani-greenidge/" target="_blank" class="waves-effect waves-light btn orange">Read the Article!</a>
@@ -71,33 +71,53 @@
         </div>
 
         <div class="divider"></div>
-        
+
+        <h3 class="center">My Creations</h3>
         <div class="row">
             <div class="section">
                 <div class="col s12 l4 info center">
-                    <a href="" target="_blank">
+                    <a href="">
                     <img class="thumbnail" src="branding/imanilogo3gold.png"></img>
-                    <div class="summary">
-                        <h3 class="center">Graphic Design</h3>
-                        <h5>I taught myself graphic design through YouTube and been doing it since I was 11 years old. I do alot of photo editing and minipulation but I still do design alot of stuff like logos, song and album covers etc. Click to see some of my work!</h5>
-                    </div>
                     </a>
-                </div>
-
-                <div class="col s12 l4 center">
-                    <img class="thumbnail" src="images/promgallery.jpg"></img>
                     <div class="summary">
-                        <h3 class="center">Websites/Projects</h3>
-                        <h5>I first learned how to code through the program CodeNation (FKA ScriptEd). I have been coding and making websites ever since, even this website that you're on right now. Click to see some of my projects.</h5>
+                        <h3 id="designHeading" class="center heading">Graphic Design</h3>
+                        <div class="designHidden">
+                            <h5>I taught myself graphic design through YouTube and been doing it since I was 11 years old. I do alot of photo editing and minipulation but I still do design alot of stuff like logos, song and album covers etc. Click to see
+                                some of my work!</h5>
+                            <div class="center">
+                                <a href="" target="_blank" class="waves-effect waves-light btn orange">Click Here</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
                 <div class="col s12 l4 center">
-
-                    <img class="thumbnail" src="images/ighoodie3gold.png"></img>
+                    <a href="">
+                    <img class="thumbnail" src="images/promgallery.jpg"></img>
+                    </a>
                     <div class="summary">
-                        <h3 class="center">Clothing</h3>
-                        <h5>I started to put some of my designs on different kinds of clothing. I made all the designs with my graphic designs skills that I mentioned before. Click here to see some of them and maybe even consider buying some.</h5>
+                        <h3 id="websiteHeading" class="center heading">Websites/Projects</h3>
+                        <div class="websiteHidden">
+                            <h5>I first learned how to code through the program CodeNation (FKA ScriptEd). I have been coding and making websites ever since, even this website that you're on right now. Click to see some of my projects.</h5>
+                            <div class="center">
+                                <a href="" target="_blank" class="waves-effect waves-light btn orange">Click Here</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col s12 l4 center">
+                    <a href="">
+                    <img class="thumbnail" src="images/ighoodie3gold.png"></img>
+                    </a>
+                    <div class="summary">
+                        <h3 id="clothingHeading" class="center heading">Clothing</h3>
+                        <div class="clothingHidden">
+                            <h5>I started to put some of my designs on different kinds of clothing. I made all the designs with my graphic designs skills that I mentioned before. Click here to see some of them and maybe even consider buying some.</h5>
+                            <div class="center">
+                                <a href="" target="_blank" class="waves-effect waves-light btn orange">Click Here</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
